<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/compass" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="text"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/passDetailsButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/pass_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
    <Button
        android:id="@+id/webBrowserButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/web_browser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passDetailsButton"
        android:layout_marginTop="5dp"/>
    <Button
        android:id="@+id/webBrowser"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webBrowserButton"
        android:layout_marginTop="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>