<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sms"
    tools:context=".SmsActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_message_36"
        app:layout_constraintEnd_toEndOf="@+id/msgEditText"
        app:layout_constraintTop_toBottomOf="@id/msgEditText" />


    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/msgEditText"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:hint="@string/enter_message"
        android:inputType="textAutoComplete"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@id/editTextPhone"
        />

    <Button
        android:id="@+id/backToMainButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>